classDiagram
    class Player {
        -vector~Territory*~ territories
        -Hand* handOfCards
        -OrdersList* orders
        +Player()
        +Player(const Player& other)
        +operator=(const Player& other)
        +~Player()
        +toDefend() vector~Territory*~
        +toAttack() vector~Territory*~
        +issueOrder() void
        +getHandOfCards() Hand*
    }

    class Territory {
        -string name
        -int id
        -int continentId
        -int ownerId
        -int armies
        -int x
        -int y
        -unordered_set~int~ adjacentIds
        +Territory(const string& name, int id, int continentId, int x, int y)
        +Territory(const Territory& other)
        +operator=(const Territory& other)
        +~Territory()
        +getName() string
        +getId() int
        +getContinentId() int
        +getOwnerId() int
        +getArmies() int
        +setOwner(int playerId) void
        +setArmies(int armyCount) void
        +addAdjacentTerritory(int territoryId) void
    }

    class Continent {
        -string name
        -int id
        -int bonusValue
        -unordered_set~int~ territoryIds
        +Continent(const string& name, int id, int bonusValue)
        +getName() string
        +getId() int
        +getBonusValue() int
        +addTerritory(int territoryId) void
    }

    class Map {
        -vector~Territory~ territories
        -vector~Continent~ continents
        -unordered_map~string,int~ territoryNameToId
        -unordered_map~int,int~ continentIdToIndex
        -unordered_map~string,int~ continentNameToId
        +Map()
        +addTerritory(const Territory& t) void
        +addContinent(const Continent& c) void
        +getTerritoryByName(const string& name) Territory*
        +getContinentById(int id) Continent*
        +validate() bool
        +isConnectedGraph() bool
        +validateContinents() bool
        +validateTerritoryMembership() bool
    }

    class Hand {
        -vector~Card*~ cards
        +Hand()
        +addCard(Card* c) void
        +playCard(size_t index, Player& player, OrdersList& ordersList, Deck& deck) void
        +size() size_t
    }

    class Card {
        -CardType type
        +Card(CardType t)
        +play(Player& player, OrdersList& ordersList, Deck& deck) void
    }

    class Deck {
        -vector~Card*~ cards
        +Deck()
        +draw(Player& player, Hand& hand) Card*
        +returnCard(Card* c) void
    }

    class OrdersList {
        -vector~Order*~ orders
        +OrdersList()
        +add(Order* order) void
        +remove(int index) void
        +move(int fromIndex, int toIndex) void
        +size() size_t
    }

    class Order {
        <<abstract>>
        #string description
        #string effect
        +validate()* bool
        +execute()* void
    }

    class Deploy {
        +validate() bool
        +execute() void
    }

    class Advance {
        +validate() bool
        +execute() void
    }

    class Bomb {
        +validate() bool
        +execute() void
    }

    class Blockade {
        +validate() bool
        +execute() void
    }

    class Airlift {
        +validate() bool
        +execute() void
    }

    class Negotiate {
        +validate() bool
        +execute() void
    }

    class State {
        -string* name_
        -map~string,State*~* transitions_
        +State(const string& name)
        +addTransition(const string& command, State* next) void
        +nextState(const string& command) State*
        +getName() const string&
    }

    class GameEngine {
        -State* current_
        -vector~State*~* states_
        +GameEngine()
        +buildGraph() void
        +applyCommand(const string&) bool
        +current() const State*
    }

    %% Core relationships
    Player "1" --> "*" Territory : owns
    Player "1" --> "1" Hand : has
    Player "1" --> "1" OrdersList : has

    %% Map relationships
    Map "1" --> "*" Territory : contains
    Map "1" --> "*" Continent : contains
    Continent "1" --> "*" Territory : contains
    Territory "*" --> "*" Territory : adjacent to

    %% Card relationships
    Hand "1" --> "*" Card : contains
    Deck "1" --> "*" Card : contains
    Card --> OrdersList : creates orders in

    %% Order relationships
    OrdersList "1" --> "*" Order : contains
    Order <|-- Deploy
    Order <|-- Advance
    Order <|-- Bomb
    Order <|-- Blockade
    Order <|-- Airlift
    Order <|-- Negotiate

    %% Game Engine relationships
    GameEngine "1" --> "*" State : manages
    GameEngine "1" --> "1" State : current state
    State "*" --> "*" State : transitions to
